@@ -335,6 +335,14 @@
     "debugger": "Yes"
   },
   {
+    "name": "futhark",
+    "full-name": "Futhark",
+    "server-name": "futhark-lsp",
+    "server-url": "https://github.com/diku-dk/futhark"
+    "installation": "A part of the compiler since 0.21.9",
+    "debugger": "Not available"
+  },
+  {
     "name": "gdscript",
     "full-name": "GDScript",
     "server-name": "godot",
